# kmeans

./: .gitignore  README.md
c++/: CMakeLists.txt  config.h  kmeans.cpp  kmeans.h  main.cpp  point.cpp  point.h
cuda/: CMakeLists.txt
cuda-numba/: config.py  device.py  kmeans.py  main.py
cuda/src/: config.h  kmeans.cu  kmeans.h  main.cu  point.cu  point.h
numba/: kmeans.py  main.py
openmp/: CMakeLists.txt  kmeans.cpp
python/: kmeans.py
